# gr-ncdsss

./: .gitignore  CMakeLists.txt  MANIFEST.md  README.md
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-ncdsssConfig.cmake
docs/: CMakeLists.txt  README.ncdsss
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: dsss_example.grc  dsss_sat.grc
grc/: CMakeLists.txt  ncdsss_DSSS_Decoder.block.yml  ncdsss_DSSS_Encoder.block.yml  ncdsss_bpsk_squelch.block.yml  ncdsss_char_Resampler.block.yml
include/gnuradio/ncdsss/: CMakeLists.txt  DSSS_Decoder.h  DSSS_Encoder.h  api.h  bpsk_squelch.h  char_Resampler.h
lib/: CMakeLists.txt  DSSS_Decoder_impl.cc  DSSS_Decoder_impl.h  DSSS_Encoder_impl.cc  DSSS_Encoder_impl.h  bpsk_squelch_impl.cc  bpsk_squelch_impl.h  char_Resampler_impl.cc  char_Resampler_impl.h
lib/datastruct/: fifobuf.h  gold.c  gold.h
python/ncdsss/: CMakeLists.txt  __init__.py
python/ncdsss/bindings/: CMakeLists.txt  DSSS_Decoder_python.cc  DSSS_Encoder_python.cc  bpsk_squelch_python.cc  char_Resampler_python.cc  python_bindings.cc
python/ncdsss/bindings/docstrings/: DSSS_Decoder_pydoc_template.h  DSSS_Encoder_pydoc_template.h  bpsk_squelch_pydoc_template.h  char_Resampler_pydoc_template.h
